update routing path
